@@ -34,6 +34,8 @@ Post-v2.7.0
      * Bundles now support hashing by just nw_src or nw_dst.
      * The "learn" action now supports a "limit" option (see ovs-ofctl(8)).
      * The port status bit OFPPS_LIVE now reflects link aliveness.
+   - Fedora Packaging:
+     * OVN services are no longer restarted automatically after upgrade.
 
 v2.7.0 - 21 Feb 2017
 ---------------------
